--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <p>
 
-          My name is Ethan Foong, I'm a student at DP High School aspiring to study computer science and engineering in college.
+          My name is Ethan Foong, I'm a student at DP High School aspiring to study computer science and engineering in college. Test
 
         </p>
       </td>
